<resources>
    <string name="admob_ind">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Расписание</string>
    <string name="app_feedback">Обратная связь: maxympritika@gmail.com</string>
    <string name="timetable_title"> Росписание </string>
    <string name="edit_title">Редактирование</string>>
    <string name="add_title">Добавление</string>>



    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>

    <string name="start_lesson">Начало урока</string>
    <string name="end_lesson">Конец урока</string>


    <string name="action_clear_all_done">Успешно очищено</string>
    <string name="action_clear_all">Очистить все</string>
    <string name="action_exit">Выход</string>

    <string name="rename">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="success_rename">Успешно изменено</string>

    <string name="title_main">Главная</string>
    <string name="title_settings">Настройки</string>
    <string name="title_main_settings">Основные параметры</string>
    <string name="title_time">Время уроков</string>
    <string name="title_subjects">Предметы</string>
    <string name="title_teachers">Учителя</string>
    <string name="title_buildings">Корпусы</string>
    <string name="title_lessons_type">Тип урока</string>
    <string name="title_display">Отображение</string>
    <string name="title_two_weeks">Показывать две недели</string>
    <string name="title_firstday">Первый день семестра</string>
    <string name="timetable">Расписание</string>

    <string name="add_button">Добавить</string>
    <string name="success_add">Успешно добавлено</string>
    <string name="error_add">Пожалуйста заполните пустые поля</string>
    <string name="error_same_value">Заданое значение уже существует</string>

    <string name="alert_add">Добавить</string>
    <string name="alert_cancel">Отменить</string>
    <string name="alert_subjects">Введите название предмета</string>

    //Настройки

    <string name="settings_1">24-х часовой формат</string>
    <string name="settings_2">Установка 24-х формата для добавления времени уроков.</string>
    <string name="settings_3">Отключить рекламу</string>
    <string name="settings_4">Цена: 0.99$</string>
    <string name="settings_5">Восстановить покупки</string>
    <string name="settings_6">Используйте этот пункт если вы уже покупали отключение рекламы.</string>
    <string name="settings_category">Основные параметры</string>
    <string name="settings_category2">Дополнительные параметры</string>

    //Default Summary Fro Settings
    <string name="subject_pref">Виберете предмет</string>


    //Intro
    <string name="intro1_screen1">Успевай везде!</string>
    <string name="intro1_screen2">Делай расписание, добавляй список предметов, учителей, время всех своих планов или занятий и успевай всё ;)</string>

    <string name="intro2_screen1">Просто и понятно!</string>
    <string name="intro2_screen2">Простой и понятный интерфейс, в котором разберется даже ребенок.</string>

    <string name="intro3_screen1">Постоянная поддержка!</string>
    <string name="intro3_screen2">Стабильный выход обновлений и улучшений. Мы всегда прислушаемся к пользователям.</string>

    <string name="next">ДАЛЕЕ</string>
    <string name="done">ПОЕХАЛИ!</string>
    <string name="skip">SKIP</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    //Alert Dialog for empty list
    <string name="go_to">Перейти</string>
    <string name="empty_list_title">Даний список пустой</string>
    <string name ="description_of_empty_list">Ваш даний список пуст. Если хотите добавить больше даних в список нажмите на кнопку "Перейтиƒ"</string>>
</resources>
