<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="@string/settings_2"
            android:title="@string/settings_1" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_category2">
        <Preference
            android:summary="@string/settings_4"
            android:title="@string/settings_3">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
        <Preference
            android:summary="@string/settings_6"
            android:title="@string/settings_5">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
