<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home"
            android:title="@string/title_main" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings" />
    </group>

    <item android:title="@string/title_main_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_time"
                    android:icon="@drawable/ic_clock"
                    android:title="@string/title_time" />
                <item
                    android:id="@+id/nav_subjects"
                    android:icon="@drawable/ic_list1"
                    android:title="@string/title_subjects" />
                <item
                    android:id="@+id/nav_teachers"
                    android:icon="@drawable/ic_user"
                    android:title="@string/title_teachers" />
                <item
                    android:id="@+id/nav_buildings"
                    android:icon="@drawable/ic_bank"
                    android:title="@string/title_buildings" />
                <item
                    android:id="@+id/nav_lessons_types"
                    android:icon="@drawable/ic_lesson"
                    android:title="@string/title_lessons_type" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_display"
        android:layout_marginBottom="45dp">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_two_weeks"
                    android:title="@string/title_two_weeks"
                    app:actionLayout="@layout/switch_activity"
                    />

                <item
                    android:id="@+id/nav_first_day"


                    android:title="@string/title_firstday" />
            </group>
        </menu>
    </item>

</menu>